@@ -1,3 +1,12 @@
+2012-03-09  Francois Felix Ingrand  <felix@ingrand.net>
+
+	* ltdl-loader.c (load_function_from_dl): remove the lt_dlsetseachpath for now. Users will have to set it externally which propably
+		  make more sense.
+
+2012-03-08  Francois Felix Ingrand  <felix@ingrand.net>
+
+	* oprs-parser.y.part: Load external now takes a module name and a symbol to execute.
+
 2012-02-28  Francois Felix Ingrand  <felix@ingrand.net>
 
 	* gope-graphic.c: Darwin seems to be more touchy about symbol multiply defined... moved the definition in a .c and leave the
